--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Verify Account UI</title>
     <link rel="stylesheet" href="./css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Karla:ital@1&family=Merriweather:wght@300&family=Playfair+Display&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
@@ -19,10 +20,9 @@
             <input class="code" type="number" placeholder="0" min="0" max="9" required>
             <input class="code" type="number" placeholder="0" min="0" max="9" required>
         </div>
-        <small class="info">This is design onle.We didn't actually send you an email as we don't have your email,right? </small>
+        
+        <small class="info">This is design onle.We didn't actually send you an email as we don't<br> have your email,right? </small>
     </div>
-
-    
 </body>
 <script src="./js/javascript.js"></script>
 </html>
