--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
             <input class="code" type="number" placeholder="0" min="0" max="9" required>
             <input class="code" type="number" placeholder="0" min="0" max="9" required>
         </div>
-        
+        <div>
+            <button class="btn" id="button">Verify</button>
+        </div>
+    
         <small class="info">This is design onle.We didn't actually send you an email as we don't<br> have your email,right? </small>
     </div>
 </body>
